--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ body {
     margin-right: 0.5rem;
 }
 
+.cellprop-actions-container  > *:hover {
+    cursor: pointer;
+}
+
 .cellprop-actions-container > select {
     border: none;
     outline: none;
@@ -179,4 +183,17 @@ body {
     font-weight: bold;
     text-decoration-thickness: 3px;
     font-size: 0.9rem;
+}
+
+.color-prop {
+    position: relative;
+}
+
+.color-prop > input {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
 }
