Added Multiple sheets feature

--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@ body {
 
 .sheet-add-icon {
     width: 2vw;
+    cursor: pointer;
 }
 
 .sheets-folder-conatainer {
@@ -176,13 +177,24 @@ body {
     height: 80%;
     display: flex;
     align-items: center;
+    overflow: auto;
 }
 
 .sheet-folder {
+    height: 80%;
     text-decoration: underline;
     font-weight: bold;
     text-decoration-thickness: 3px;
     font-size: 0.9rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sheet-content {
+    width: 5rem;
+    cursor: pointer;
 }
 
 .color-prop {
