--- a/style.css
+++ b/style.css
@@ -18,8 +18,18 @@ body {
 }
 
 .page-action {
-    margin: 0.5rem;
+    width: 3.5rem;
+    height: 2rem;
+    text-align: center;
     color: #f1f2f6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.active {
+    background-color: #f1f2f6;
+    color: #218c74;
 }
 
 .cellprop-actions-container {
